# vision_based_line_follower

./: README.md
microcontroller/src/: motor_controller.ino
vision_based_line_follower/: package.xml  setup.cfg  setup.py
vision_based_line_follower/gazebo/: track_world.sdf
vision_based_line_follower/gazebo/models/line_follower_bot/: model.config  model.sdf
vision_based_line_follower/gazebo/models/track_line/: model.config  model.sdf
vision_based_line_follower/launch/: gazebo.launch.py  hw.launch.py  sim.launch.py
vision_based_line_follower/vision_based_line_follower/: camera_node.py  controller_node.py  line_detector.py
